Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -226,9 +226,15 @@
 
   <!-- 1. Um Portal Multimídia -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#8f4fff]" id="card1">
-    <svg class="w-10 h-10 mx-auto mb-4 text-[#a855f7]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-  <path d="M12 2a10 10 0 100 20 1 1 0 010 2 12 12 0 110-24 1 1 0 010 2z"/>
-  <path d="M12 6a6 6 0 100 12 1 1 0 010 2 8 8 0 110-16 1 1 0 010 2z"/>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40">
+  <defs>
+    <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#8f4fff"/>
+      <stop offset="100%" stop-color="#facc15"/>
+    </linearGradient>
+  </defs>
+  <path d="M4.05 11a8 8 0 111.414 1.414L4.05 11zm0 0l6.364-6.364M20 12a8 8 0 10-8 8"
+        stroke="url(#grad)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Um Portal Multimídia</h3>
     <p class="text-sm text-gray-300 text-center">Animes, mangás, livros, eBooks e apps — um universo em expansão onde tudo é feito com propósito e alma.</p>
