--- a/index.html
+++ b/index.html
@@ -226,15 +226,14 @@
 
   <!-- 1. Um Portal Multimídia -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#8f4fff]" id="card1">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40">
+    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
   <defs>
-    <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
+    <linearGradient id="grad-vortex" x1="0%" y1="0%" x2="100%" y2="100%">
       <stop offset="0%" stop-color="#8f4fff"/>
       <stop offset="100%" stop-color="#facc15"/>
     </linearGradient>
   </defs>
-  <path d="M4.05 11a8 8 0 111.414 1.414L4.05 11zm0 0l6.364-6.364M20 12a8 8 0 10-8 8"
-        stroke="url(#grad)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+  <path d="M12 2a10 10 0 100 20M12 6a6 6 0 100 12" stroke="url(#grad-vortex)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Um Portal Multimídia</h3>
     <p class="text-sm text-gray-300 text-center">Animes, mangás, livros, eBooks e apps — um universo em expansão onde tudo é feito com propósito e alma.</p>
@@ -242,10 +241,16 @@
 
   <!-- 2. Seu Dojo Digital -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#39ff14]" id="card2">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#22c55e]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 3a9 9 0 100 18 4.5 4.5 0 010-9 4.5 4.5 0 010-9zM12 3a4.5 4.5 0 010 9 4.5 4.5 0 010 9"/>
-  <circle cx="12" cy="7.5" r="1.5" fill="currentColor"/>
-  <circle cx="12" cy="16.5" r="1.5" fill="currentColor"/>
+    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient id="grad-dojo" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#8f4fff"/>
+      <stop offset="100%" stop-color="#facc15"/>
+    </linearGradient>
+  </defs>
+  <path d="M12 2a10 10 0 100 20M12 12a4 4 0 010-8" stroke="url(#grad-dojo)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <circle cx="12" cy="8" r="1.5" fill="url(#grad-dojo)"/>
+  <circle cx="12" cy="16" r="1.5" fill="url(#grad-dojo)"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Seu Dojo Digital</h3>
     <p class="text-sm text-gray-300 text-center">Cada missão, leitura ou clique aqui ecoa fora da tela. Você cresce no jogo — e na vida. Um reflexo puxa o outro.</p>
@@ -253,8 +258,14 @@
 
   <!-- 3. Uma Frequência Criativa -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#6c5ce7]" id="card3">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#6366f1]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M3 12c2-4 4-4 6 0s4 4 6 0 4-4 6 0"/>
+    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient id="grad-freq" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#8f4fff"/>
+      <stop offset="100%" stop-color="#facc15"/>
+    </linearGradient>
+  </defs>
+  <path d="M3 12c2-4 4-4 6 0s4 4 6 0s4-4 6 0" stroke="url(#grad-freq)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Uma Frequência Criativa</h3>
     <p class="text-sm text-gray-300 text-center">NoHeroes é um portal vivo onde ideias nascem, mutam e se chocam. Uma rede para quem nunca se encaixou — mas sempre quis criar.</p>
@@ -262,8 +273,15 @@
 
   <!-- 4. A Forja dos Sonhos -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#facc15]" id="card4">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#facc15]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M3 16h18M6 8h12v4H6zM12 4v2m0 0l1-1m-1 1l-1-1"/>
+    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient id="grad-forja" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#8f4fff"/>
+      <stop offset="100%" stop-color="#facc15"/>
+    </linearGradient>
+  </defs>
+  <path d="M4 10h16v3H4zM6 13v3h2v-3M16 13v3h2v-3" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M12 2v2m0 0l1-1m-1 1l-1-1" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">A Forja dos Sonhos</h3>
     <p class="text-sm text-gray-300 text-center">Ajudamos você a tirar da mente o que vive preso há anos. Sites, projetos, ideias — aqui, transformamos sonhos em realidade palpável.</p>
