Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </svg>
       <span class="text-white">Projetos</span>
     </div>
-    <span class="text-xs text-purple-400 cinzel">Arsenal</span>
+    <span class="text-xs text-purple-400 cinzel">Grimório</span>
   </a>
 
   <a href="sobre.html" class="flex items-center justify-between p-3 rounded-lg hover:bg-[#1c1c1c] transition">
