--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-16">
 
   <!-- 1. Um Portal Multimídia -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-left float-levitate text-center" style="animation-delay: 0.3s">
-  <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+ <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-left float-levitate text-center" style="animation-delay: 0.3s">
+  <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
     <defs>
       <linearGradient id="grad-vortex" x1="0%" y1="0%" x2="100%" y2="100%">
         <stop offset="0%" stop-color="#8f4fff"/>
@@ -240,74 +240,75 @@
     </defs>
     <path d="M12 2a10 10 0 100 20M12 6a6 6 0 100 12" stroke="url(#grad-vortex)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
   </svg>
-
   <h3 class="text-lg font-bold gradiente-titulo mb-2 font-[Cinzel Decorative]">Um Portal Multimídia</h3>
   <p class="text-sm text-gray-300 mb-4">Animes, mangás, livros, eBooks, apps. Um universo em expansão onde tudo é feito com propósito — e alma.</p>
-
   <button onclick="document.querySelector('#universo').scrollIntoView({ behavior: 'smooth' })"
-    class="px-3 py-1 text-sm rounded-full bg-[#8f4fff]/10 border border-[#8f4fff] text-[#8f4fff] hover:bg-[#8f4fff]/20 transition">
+    class="px-3 py-1 text-sm rounded-full bg-gradient-to-r from-[#8f4fff]/20 to-[#facc15]/20 border border-[#8f4fff] text-[#8f4fff] hover:brightness-125 transition">
     Explorar o Universo
   </button>
 </div>
 
   <!-- 2. Seu Dojo Digital -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#39ff14]" id="card2">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <defs>
-    <linearGradient id="grad-dojo" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" stop-color="#8f4fff"/>
-      <stop offset="100%" stop-color="#facc15"/>
-    </linearGradient>
-  </defs>
-  <path d="M12 2a10 10 0 100 20M12 12a4 4 0 010-8" stroke="url(#grad-dojo)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-  <circle cx="12" cy="8" r="1.5" fill="url(#grad-dojo)"/>
-  <circle cx="12" cy="16" r="1.5" fill="url(#grad-dojo)"/>
-</svg>
-    <h3 class="text-xl font-bold cinzel text-center mb-2">Seu Dojo Digital</h3>
-    <p class="text-sm text-gray-300 text-center">Cada missão, leitura ou clique aqui ecoa fora da tela. Você cresce no jogo — e na vida. Um reflexo puxa o outro.</p>
-  </div>
-
-  <!-- 3. Uma Frequência Criativa -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#6c5ce7]" id="card3">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <defs>
-    <linearGradient id="grad-freq" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" stop-color="#8f4fff"/>
-      <stop offset="100%" stop-color="#facc15"/>
-    </linearGradient>
-  </defs>
-  <path d="M3 12c2-4 4-4 6 0s4 4 6 0s4-4 6 0" stroke="url(#grad-freq)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-    <h3 class="text-xl font-bold cinzel text-center mb-2">Uma Frequência Criativa</h3>
-    <p class="text-sm text-gray-300 text-center">NoHeroes é um portal vivo onde ideias nascem, mutam e se chocam. Uma rede para quem nunca se encaixou — mas sempre quis criar.</p>
-  </div>
-
-  <!-- 4. A Forja dos Sonhos -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#facc15]" id="card4">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <defs>
-    <linearGradient id="grad-forja" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" stop-color="#8f4fff"/>
-      <stop offset="100%" stop-color="#facc15"/>
-    </linearGradient>
-  </defs>
-  <path d="M4 10h16v3H4zM6 13v3h2v-3M16 13v3h2v-3" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-  <path d="M12 2v2m0 0l1-1m-1 1l-1-1" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-    <h3 class="text-xl font-bold cinzel text-center mb-2">A Forja dos Sonhos</h3>
-    <p class="text-sm text-gray-300 text-center">Ajudamos você a tirar da mente o que vive preso há anos. Sites, projetos, ideias — aqui, transformamos sonhos em realidade palpável.</p>
-  </div>
-
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-right float-levitate text-center" style="animation-delay: 0.6s">
+  <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
+    <defs>
+      <linearGradient id="grad-dojo" x1="0%" y1="0%" x2="100%" y2="100%">
+        <stop offset="0%" stop-color="#8f4fff"/>
+        <stop offset="100%" stop-color="#facc15"/>
+      </linearGradient>
+    </defs>
+    <path d="M12 2a10 10 0 100 20M12 12a4 4 0 010-8" stroke="url(#grad-dojo)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <circle cx="12" cy="8" r="1.5" fill="url(#grad-dojo)"/>
+    <circle cx="12" cy="16" r="1.5" fill="url(#grad-dojo)"/>
+  </svg>
+  <h3 class="text-lg font-bold gradiente-titulo mb-2 font-[Cinzel Decorative]">Seu Dojo Digital</h3>
+  <p class="text-sm text-gray-300 mb-4">Cada missão, leitura ou clique aqui ecoa fora da tela. Você cresce no jogo — e na vida. Um reflexo puxa o outro.</p>
+  <button onclick="document.querySelector('#dojo').scrollIntoView({ behavior: 'smooth' })"
+    class="px-3 py-1 text-sm rounded-full bg-gradient-to-r from-[#8f4fff]/20 to-[#facc15]/20 border border-[#8f4fff] text-[#8f4fff] hover:brightness-125 transition">
+    Evoluir Agora
+  </button>
 </div>
 
-  </div>
+  <!-- 3. Uma Frequência Criativa -->
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-left float-levitate text-center" style="animation-delay: 0.9s">
+  <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
+    <defs>
+      <linearGradient id="grad-freq" x1="0%" y1="0%" x2="100%" y2="100%">
+        <stop offset="0%" stop-color="#8f4fff"/>
+        <stop offset="100%" stop-color="#facc15"/>
+      </linearGradient>
+    </defs>
+    <path d="M3 12c2-4 4-4 6 0s4 4 6 0s4-4 6 0" stroke="url(#grad-freq)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+  <h3 class="text-lg font-bold gradiente-titulo mb-2 font-[Cinzel Decorative]">Uma Frequência Criativa</h3>
+  <p class="text-sm text-gray-300 mb-4">NoHeroes é um portal vivo onde ideias nascem, mutam e se chocam. Uma rede para quem nunca se encaixou — mas sempre quis criar.</p>
+  <button onclick="document.querySelector('#comunidade').scrollIntoView({ behavior: 'smooth' })"
+    class="px-3 py-1 text-sm rounded-full bg-gradient-to-r from-[#8f4fff]/20 to-[#facc15]/20 border border-[#8f4fff] text-[#8f4fff] hover:brightness-125 transition">
+    Ver Comunidade
+  </button>
+</div>
 
-  <!-- Botão -->
-  <div class="mt-12">
-    <a href="sobre.html" class="btn-líquido-pulsante">
-      ✦ Descobrir o Portal ✦
-    </a>
-  </div>
+  <!-- 4. A Forja dos Sonhos -->
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-right float-levitate text-center" style="animation-delay: 1.2s">
+  <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
+    <defs>
+      <linearGradient id="grad-forja" x1="0%" y1="0%" x2="100%" y2="100%">
+        <stop offset="0%" stop-color="#8f4fff"/>
+        <stop offset="100%" stop-color="#facc15"/>
+      </linearGradient>
+    </defs>
+    <path d="M4 10h16v3H4zM6 13v3h2v-3M16 13v3h2v-3" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M12 2v2m0 0l1-1m-1 1l-1-1" stroke="url(#grad-forja)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+  <h3 class="text-lg font-bold gradiente-titulo mb-2 font-[Cinzel Decorative]">A Forja dos Sonhos</h3>
+  <p class="text-sm text-gray-300 mb-4">Ajudamos você a tirar da mente o que vive preso há anos. Sites, projetos, marcas — aqui, a gente transforma sonhos em realidade palpável.</p>
+  <button onclick="document.querySelector('#servicos').scrollIntoView({ behavior: 'smooth' })"
+    class="px-3 py-1 text-sm rounded-full bg-gradient-to-r from-[#8f4fff]/20 to-[#facc15]/20 border border-[#8f4fff] text-[#8f4fff] hover:brightness-125 transition">
+    Criar com a Gente
+  </button>
+</div>
+</div>
+
 </section>
 
 
