--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">  
 <head>  
   <meta charset="UTF-8">  
@@ -230,7 +229,7 @@
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-16">
 
   <!-- 1. Um Portal Multimídia -->
- <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-left animate-fade-in-left float-levitate text-center" style="animation-delay: 0.3s">
+ <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-left float-levitate text-center" style="animation-delay: 0.3s">
   <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
     <defs>
       <linearGradient id="grad-vortex" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -249,7 +248,7 @@
 </div>
 
   <!-- 2. Seu Dojo Digital -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-right animate-fade-in-right float-levitate text-center" style="animation-delay: 0.6s">
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-right float-levitate text-center" style="animation-delay: 0.6s">
   <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
     <defs>
       <linearGradient id="grad-dojo" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -270,7 +269,7 @@
 </div>
 
   <!-- 3. Uma Frequência Criativa -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-left animate-fade-in-left float-levitate text-center" style="animation-delay: 0.9s">
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-left float-levitate text-center" style="animation-delay: 0.9s">
   <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
     <defs>
       <linearGradient id="grad-freq" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -289,7 +288,7 @@
 </div>
 
   <!-- 4. A Forja dos Sonhos -->
-  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-right animate-fade-in-right float-levitate text-center" style="animation-delay: 1.2s">
+  <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md reveal-right float-levitate text-center" style="animation-delay: 1.2s">
   <svg class="mx-auto mb-4" width="40" height="40" viewBox="0 0 24 24" fill="none">
     <defs>
       <linearGradient id="grad-forja" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -580,4 +579,4 @@ window.addEventListener("resize", resizeCanvas);
   });
 </script>
   </body>  
-</html>  
+</html> 
