--- a/index.html
+++ b/index.html
@@ -555,27 +555,29 @@ createParticles(Math.floor(150 * ratio));   // ou qualquer quantidade desejada
 });
 
 window.addEventListener("resize", resizeCanvas);
+  window.addEventListener("DOMContentLoaded", () => {
   ScrollReveal().reveal('.reveal-left', {
     origin: 'left',
-    distance: '50px',
-    duration: 1200,
+    distance: '60px',
+    duration: 1000,
     delay: 200,
-    opacity: 0,
-    scale: 0.9,
     easing: 'ease-out',
+    opacity: 0,
+    scale: 0.95,
     reset: true
   });
 
   ScrollReveal().reveal('.reveal-right', {
     origin: 'right',
-    distance: '50px',
-    duration: 1200,
+    distance: '60px',
+    duration: 1000,
     delay: 200,
-    opacity: 0,
-    scale: 0.9,
     easing: 'ease-out',
+    opacity: 0,
+    scale: 0.95,
     reset: true
   });
+});
 </script>
   </body>  
 </html> 
