Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+header {
+  transform: translateZ(0);
+  will-change: transform;
+}
 </style>
 
 </head>  
